HelloUltraviolet/Fixtures/RejectedSource/FFI/UnwindOnNonFFIProcedure/Expected.uv
//! Expected diagnostic metadata for the UnwindOnNonFFIProcedure rejected-source specimen.

expectedDiagnostic("E-SYS-3356", "requirement.23.UnwindAttributeTargetValidity")
